--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      mariadb:
+        image: mariadb:latest
+        ports:
+          - 3306
+        env:
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
+          MYSQL_DATABASE: test
+          MYSQL_ROOT_PASSWORD: password
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
       - name: Checkout
@@ -23,8 +34,12 @@ jobs:
           default: true
           override: true
 
-      - name: Test
-        run: cargo test
+    #  - name: Test
+    #    env:
+    #        DATABASE_URL: mysql://user:test@localhost:${{ job.services.mariadb.ports[3306] }}/test
+    #    run: cargo test
 
       - name: Build
+        env:
+            DATABASE_URL: mysql://user:test@localhost:${{ job.services.mariadb.ports[3306] }}/test
         run: cargo build
