--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3.0"
 tracing-actix-web = "0.5.0-beta.1"
 # JWT for app API authentication
-josekit = "0.7"
+jsonwebtoken = "7"
 # orm + sql
 [dependencies.ormx]
 version = "0.10"
