--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ tracing-subscriber = "0.3.0"
 tracing-actix-web = "0.5.0-beta.1"
 # JWT for app API authentication
 jsonwebtoken = "7"
+# time handling
+time = "0.3"
 # orm + sql
 [dependencies.ormx]
 version = "0.10"
