--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,19 +33,23 @@ jobs:
           toolchain: stable
           default: true
           override: true
-
+      - name: install mariadb lib
+        run: sudo apt-get install -y libmariadb-dev
+      - name: setup python
+        uses: py-actions/py-dependency-install@v2
+        with:
+          path: "testing/requirements.txt"
       - name: Setup DB
         env:
-            DATABASE_URL: mysql://user:password@localhost:${{ job.services.mariadb.ports[3306] }}/test
-        run: mysql 
-        # TODO: use cache, see https://github.com/launchbadge/sqlx/blob/master/.github/workflows/sqlx.yml
+            DATABASE_URL: mysql://user:password@127.0.0.1:${{ job.services.mariadb.ports[3306] }}/test
+        run: python testing/x.py
 
     #  - name: Test
     #    env:
-    #        DATABASE_URL: mysql://user:password@localhost:${{ job.services.mariadb.ports[3306] }}/test
+    #        DATABASE_URL: mysql://user:password@127.0.0.1:${{ job.services.mariadb.ports[3306] }}/test
     #    run: cargo test
 
       - name: Build
         env:
-            DATABASE_URL: mysql://user:password@localhost:${{ job.services.mariadb.ports[3306] }}/test
+            DATABASE_URL: mysql://user:password@127.0.0.1:${{ job.services.mariadb.ports[3306] }}/test
         run: cargo build
