--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ thiserror = "1"
 actix-web = "4.0.0-beta.10"
 actix-rt = "2"
 actix-identity = "0.4.0-beta.3"
+# enum to string and back
+strum = {version = "0.23", features = ["derive"] }
 # serialization
 serde = "1"
 serde_json = "1"
