--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sync_backend"
+name = "vta_sync_backend"
 version = "0.1.0"
 edition = "2018"
 
@@ -27,8 +27,12 @@ serde = "1"
 serde_json = "1"
 # logging
 tracing = "0.1"
-tracing-subscriber = "0.3.0"
 tracing-actix-web = "0.5.0-beta.1"
+tracing-opentelemetry = { version = "0.16" }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+opentelemetry = { version = "0.16", features = ["rt-tokio-current-thread"] }
+opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio-current-thread"] }
 # JWT for app API authentication
 jsonwebtoken = "7"
 # time handling
