add clippy linting and fixup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - dev
 
 jobs:
   build:
@@ -61,3 +62,9 @@ jobs:
         env:
             DATABASE_URL: mysql://user:password@127.0.0.1:${{ job.services.mariadb.ports[3306] }}/test
         run: cargo build
+      
+      - run: rustup component add clippy
+      - name: clippy lints
+        env:
+            DATABASE_URL: mysql://user:password@127.0.0.1:${{ job.services.mariadb.ports[3306] }}/test
+        run: cargo clippy
